fix: align center image

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ li {
 }
 #image {
   display: block;
+  margin: 10px auto;
   max-width: 100%;
 }
 #heading {
